fixed z-index

--- a/css/main.scss
+++ b/css/main.scss
@@ -252,4 +252,9 @@ p {
 	}
 }
 
+.site-header {
+    z-index: 10;
+    position: relative;
+}
+
 
